--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,11 @@
 body{
- 
+    background:rgb(59, 59, 182) ;
     font: normal 15pt Arial;
     text-align: center;
    
    
 }
-p{
-    display:inline-block;
-    background-color: gray;
-    width: 200px;
-    padding: 10px;
-    font-weight: bold;
-    color: #ffff;
-    border-radius: 10px;
-    margin: 5px;
-    
-    
 
-
-}
 
 header{
 color: #fff;
@@ -34,6 +21,23 @@ section{
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.301);
 
 }
+#btn{
+    width: 200px;
+    height: 40px;
+    font-size: 30px;
+    border: none;
+}
+#btn:hover{
+background-color: green;
+color: white;
+}
+#fAno{
+    width: 350px;
+    height: 30px;
+    background-color: #b7b8c0;
+    border: none;
+    font-size: 20px;
+}
 div{
     text-align: center;
     padding: 10px;
@@ -46,10 +50,9 @@ footer{
     
 }
 
-#foto img{
-    width: 200px;
-    border-radius: 50%;
-    padding: 10px;
+#foto{
+width: 300px;
+border-radius: 50%;
    
     
 }
